Fix alignment with relative #header

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -48,6 +48,7 @@ body {
 	top: 5px;
 	right: 5px;
 	border-radius: 2px;
+	z-index: 2;
 }
 
 @media (max-width: @forkwidth) {
@@ -62,6 +63,7 @@ body {
 	background-color: @headerbgcolor;
 	border-radius: 5px 5px 5px 0;
 	padding: 1px @headerpadding 0 @headerpadding;
+	position: relative;
 }
 
 .smartScanRunning #header {
@@ -89,7 +91,7 @@ input::-webkit-inner-spin-button {
 }
 
 .smartscan {
-    bottom: 37px;
+    bottom: 18px;
     color: #999;
     font-size: 20px !important;
     position: absolute;
@@ -102,7 +104,7 @@ input::-webkit-inner-spin-button {
 	background: -webkit-gradient(linear, left top, left bottom, from(rgb(240, 240, 240)), to(rgb(255, 255, 255)));
     border: 1px solid #bbb;
     border-radius: 5px;
-    bottom: 31px;
+    bottom: 12px;
     padding: 5px 8px 5px 10px;
     right: 11px;
 	cursor: pointer;
